--- a/config/config.yml
+++ b/config/config.yml
@@ -28,6 +28,14 @@ monitoring:
   # Default: 3
   maxRetries: 3
 
+# Notifications
+notifications:
+  telegram:
+    enabled: false
+    botToken: "your-bot-token"
+    chatId: "your-chat-id"
+    message: "IP address changed to: {ip}"
+
 # Logging configuration
 logging:
   # Log level (DEBUG, INFO, WARN, ERROR)
